# Projekt_Slotsy

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oknostartowe.cpp  oknostartowe.h  oknostartowe.ui  probabilityinputwidget.cpp  probabilityinputwidget.h  wygrane.h
Gra1/: CMakeLists.txt  oknogra1.cpp  oknogra1.h  oknogra1.ui
Gra2/: CMakeLists.txt  oknogra2.cpp  oknogra2.h  oknogra2.ui
UI/: CMakeLists.txt  obslugawyjatkow.cpp  obslugawyjatkow.h  oknogra1.cpp  oknogra1.h  oknogra1.ui  oknogra2.cpp  oknogra2.h  oknogra2.ui  oknostartowe.cpp  oknostartowe.h  oknostartowe.ui  wygrane.cpp  wygrane.h
WarstwaBiznesowa/: CMakeLists.txt  WarstwaBiznesowa_global.h  gra1mechaniki.cpp  gra1mechaniki.h  gra2mechaniki.cpp  gra2mechaniki.h  warstwabiznesowa.cpp  warstwabiznesowa.h
